docs/2.0/api/Widget.md
---
---
# Widget

Base class for all widgets

Extends [NativeObject](NativeObject.md)

## Methods

### animate(properties, options)

**Parameters:** 

- properties: *{transform?: Transformation, opacity?: number}*
  - the properties and target values to animate.
- options: *[AnimationOptions](../types.md#animationoptions)*
  - configures the animation itself.

**Returns:** *Promise<any>*

Starts an animation that transforms the given properties from their current values to the given ones. Supported properties are *transform* and *opacity*. Returns a promise that is resolved once the animation is completed and is rejected if the animation is aborted.

### appendTo(parent)

**Parameters:** 

- parent: *[Composite](Composite.md)*

**Returns:** *this*

Appends this widget to the given parent. The parent widget must support children (extending *Composite*). If the widget already has a parent, it is removed from the old parent.

### apply(properties)

**Parameters:** 

- properties: *Object*
  - an object in the format `{Selector: {property: value, property: value, ... }, Selector: ...}`

**Returns:** *this*

Applies the given properties to all descendants that match the associated selector(s).

### children(selector)

**Parameters:** 

- selector: *[Selector](../types.md#selector)* [**Optional**]
  - a selector expression or a predicate function to filter the results.

**Returns:** *[WidgetCollection](WidgetCollection.md)*

Returns a (possibly empty) collection of all children of this widget that match the given selector.

### detach()

**Returns:** *this*

Removes this widget from its parent.

### dispose()

Removes this widget from its parent and destroys it. Also disposes of all its children. Triggers a `remove` event on the parent and a `dispose` event on itself. The widget can no longer be used.

### find(selector)

**Parameters:** 

- selector: *[Selector](../types.md#selector)* [**Optional**]
  - a selector expression or a predicate function to filter the results.

**Returns:** *[WidgetCollection](WidgetCollection.md)*

Returns a (possibly empty) collection of all descendants of this widget that match the given selector.

### insertAfter(widget)

**Parameters:** 

- widget: *[Widget](Widget.md)*

**Returns:** *this*

Inserts this widget directly after the given widget. If the widget already has a parent, it is removed from the old parent.

### insertBefore(widget)

**Parameters:** 

- widget: *[Widget](Widget.md)*

**Returns:** *this*

Inserts this widget directly before the given widget. If the widget already has a parent, it is removed from the old parent.

### isDisposed()

**Returns:** *boolean*

Returns `true` if the widget has been disposed, otherwise `false`.

### parent()

**Returns:** *[Composite](Composite.md)*

Returns the parent of this widget or `null` if this widget is not appended to a parent.

### siblings(selector)

**Parameters:** 

- selector: *[Selector](../types.md#selector)* [**Optional**]
  - a selector expression or a predicate function to filter the results.

**Returns:** *[WidgetCollection](WidgetCollection.md)*

Returns a (possibly empty) collection of all siblings of this widget that match the given selector.


## Properties

### background

Type: *[Color](../types.md#color)*

Background color of the widget.

### backgroundImage

Type: *[Image](../types.md#image)*

An image to be displayed on the widget's background. If the image is smaller than the widget, it will be tiled.

### baseline

Type: *Widget|Selector*

The vertical position of the widget's baseline relative to a sibling widget.

### bottom

Type: *[margin](../types.md#margin)*

The position of the widget's bottom edge relative to the parent or a sibling widget.

### bounds

**read-only**<br/>
Type: *[Bounds](../types.md#bounds)*

The actual location and size of the widget, relative to its parent.

### centerX

Type: *[offset](../types.md#offset)*

The horizontal position of the widget's center relative to the parent's center.

### centerY

Type: *[offset](../types.md#offset)*

The vertical position of the widget's center relative to the parent's center.

### class

Type: *string*

A class name or a whitespace separated list of class names to identify the widget. Class names are arbitrary strings that describe a state or a category and help to select widgets using a selector expression. A class name may only contain alphanumeric characters, `_` and `-`. Class names can also be added or removed using the field `classList`.

### classList

Type: *string[]*

Provides convenient access to the list of class names set to this widget. Class names can either be set using the `class` property or by modifying the `classList` directly.

### cornerRadius

Type: *number*

Configure a widget to have rounded corners. Each corner is affected equally. Supported on iOS and Android 5.0+.

### data

**read-only**<br/>
Type: *Object*

A general-purpose object that allows the application to attach arbitrary data to the widget. Manipulations on this object have no effect on the widget itself in any way. Example: `widget.data.myData = myData;`

### elevation

Type: *number*

The position of the widget on the z-axis. Currently only supported on Android 5.0+.

### enabled

Type: *boolean*, default: `true`

Whether the widget can be operated.

### font

Type: *[Font](../types.md#font)*

The font used for the widget.

### height

Type: *[dimension](../types.md#dimension)*

The height of the widget.

### highlightOnTouch

Type: *boolean*, default: `false`

Whether the entire widget should be highlighted while touched.

### id

Type: *string*

A string to identify the widget by using selectors. IDs are optional. It is strongly recommended that they are unique within a page.

### layoutData

Type: *[LayoutData](../types.md#layoutdata)*

Shorthand for all layout properties. See [Layout](../layout.md).

### left

Type: *[margin](../types.md#margin)*

The position of the widget's left edge relative to the parent or a sibling widget.

### opacity

Type: *number*, default: `1`

Opacity of the entire widget, in the range `[0..1]`. Can be used for fade animations.

### right

Type: *[margin](../types.md#margin)*

The position of the widget's right edge relative to the parent or a sibling widget.

### top

Type: *[margin](../types.md#margin)*

The position of the widget's top edge relative to the parent or a sibling widget.

### transform

Type: *[Transformation](../types.md#transformation)*

Modifications to the widget's shape, size, or position. Can be used for animations. **Note:** In Android the *transform* property does not affect the *bounds* property, while it does so in iOS.

### visible

Type: *boolean*, default: `true`

Whether the widget is visible.

### width

Type: *[dimension](../types.md#dimension)*

The width of the widget.

### win_theme

Type: *string*, supported values: `light`, `dark`, `default`, default: `default`

Controls the color scheme used for this widget. When set to `"default"` the theme is inherited from either the parent (if present) or the OS settings. Available only on windows.


## Events

### change:background

Fired when the [*background*](#background) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[Color](../types.md#color)*
    The new value of [*background*](#background).


### change:backgroundImage

Fired when the [*backgroundImage*](#backgroundImage) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[Image](../types.md#image)*
    The new value of [*backgroundImage*](#backgroundImage).


### change:baseline

Fired when the [*baseline*](#baseline) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *Widget|Selector*
    The new value of [*baseline*](#baseline).


### change:bottom

Fired when the [*bottom*](#bottom) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[margin](../types.md#margin)*
    The new value of [*bottom*](#bottom).


### change:bounds

Fired when the [*bounds*](#bounds) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[Bounds](../types.md#bounds)*
    The new value of [*bounds*](#bounds).


### change:centerX

Fired when the [*centerX*](#centerX) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[offset](../types.md#offset)*
    The new value of [*centerX*](#centerX).


### change:centerY

Fired when the [*centerY*](#centerY) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[offset](../types.md#offset)*
    The new value of [*centerY*](#centerY).


### change:class

Fired when the [*class*](#class) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *string*
    The new value of [*class*](#class).


### change:classList

Fired when the [*classList*](#classList) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *string[]*
    The new value of [*classList*](#classList).


### change:cornerRadius

Fired when the [*cornerRadius*](#cornerRadius) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *number*
    The new value of [*cornerRadius*](#cornerRadius).


### change:data

Fired when the [*data*](#data) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *Object*
    The new value of [*data*](#data).


### change:elevation

Fired when the [*elevation*](#elevation) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *number*
    The new value of [*elevation*](#elevation).


### change:enabled

Fired when the [*enabled*](#enabled) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *boolean*
    The new value of [*enabled*](#enabled).


### change:font

Fired when the [*font*](#font) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[Font](../types.md#font)*
    The new value of [*font*](#font).


### change:height

Fired when the [*height*](#height) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[dimension](../types.md#dimension)*
    The new value of [*height*](#height).


### change:highlightOnTouch

Fired when the [*highlightOnTouch*](#highlightOnTouch) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *boolean*
    The new value of [*highlightOnTouch*](#highlightOnTouch).


### change:id

Fired when the [*id*](#id) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *string*
    The new value of [*id*](#id).


### change:layoutData

Fired when the [*layoutData*](#layoutData) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[LayoutData](../types.md#layoutdata)*
    The new value of [*layoutData*](#layoutData).


### change:left

Fired when the [*left*](#left) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[margin](../types.md#margin)*
    The new value of [*left*](#left).


### change:opacity

Fired when the [*opacity*](#opacity) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *number*
    The new value of [*opacity*](#opacity).


### change:right

Fired when the [*right*](#right) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[margin](../types.md#margin)*
    The new value of [*right*](#right).


### change:top

Fired when the [*top*](#top) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[margin](../types.md#margin)*
    The new value of [*top*](#top).


### change:transform

Fired when the [*transform*](#transform) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[Transformation](../types.md#transformation)*
    The new value of [*transform*](#transform).


### change:visible

Fired when the [*visible*](#visible) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *boolean*
    The new value of [*visible*](#visible).


### change:width

Fired when the [*width*](#width) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *[dimension](../types.md#dimension)*
    The new value of [*width*](#width).


### change:win_theme

Fired when the [*win_theme*](#win_theme) property changes.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **value**: *string*
    The new value of [*win_theme*](#win_theme).


### dispose

Fired when the widget is about to be disposed. At this point the widget and its children are still accessible.
### longpress

Fired after pressing a widget for a specific amount of time (about a second), and again on lifting the finger.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **state**: *'start'|'end'|'cancel'*
    'start' when the widget has been hold down long enough, 'end' when the finger has been lifted and 'cancel' when the gesture has been interrupted.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.


### pan

Fired continuously after a finger touching the widget moved for a certain distance.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **state**: *'start'|'change'|'end'|'cancel'*
    'start' when the finger starts moving, 'change' while the finger is moving, 'end' when the finger has been lifted and 'cancel' when the gesture has been interrupted.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.

- **translationX**: *number*
    Current horizontal touch offset relative to the first touch.

- **translationY**: *number*
    Current vertical touch offset relative to the first touch.

- **velocityX**: *number*
    Current horizontal velocity in pixels per second.

- **velocityY**: *number*
    Current vertical velocity in pixels per second.


### panDown

Fired when a finger starts moving down.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **state**: *'start'|'change'|'end'|'cancel'*
    'start' when the finger starts moving, 'change' while the finger is moving, 'end' when the finger has been lifted and 'cancel' when the gesture has been interrupted.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.

- **translationX**: *number*
    Current horizontal touch offset relative to the first touch.

- **translationY**: *number*
    Current vertical touch offset relative to the first touch.

- **velocityX**: *number*
    Current horizontal velocity in pixels per second.

- **velocityY**: *number*
    Current vertical velocity in pixels per second.


### panHorizontal

Fired when a finger starts moving left or right.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **state**: *'start'|'change'|'end'|'cancel'*
    'start' when the finger starts moving, 'change' while the finger is moving, 'end' when the finger has been lifted and 'cancel' when the gesture has been interrupted.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.

- **translationX**: *number*
    Current horizontal touch offset relative to the first touch.

- **translationY**: *number*
    Current vertical touch offset relative to the first touch.

- **velocityX**: *number*
    Current horizontal velocity in pixels per second.

- **velocityY**: *number*
    Current vertical velocity in pixels per second.


### panLeft

Fired when a finger starts moving left.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **state**: *'start'|'change'|'end'|'cancel'*
    'start' when the finger starts moving, 'change' while the finger is moving, 'end' when the finger has been lifted and 'cancel' when the gesture has been interrupted.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.

- **translationX**: *number*
    Current horizontal touch offset relative to the first touch.

- **translationY**: *number*
    Current vertical touch offset relative to the first touch.

- **velocityX**: *number*
    Current horizontal velocity in pixels per second.

- **velocityY**: *number*
    Current vertical velocity in pixels per second.


### panRight

Fired when a finger starts moving right.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **state**: *'start'|'change'|'end'|'cancel'*
    'start' when the finger starts moving, 'change' while the finger is moving, 'end' when the finger has been lifted and 'cancel' when the gesture has been interrupted.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.

- **translationX**: *number*
    Current horizontal touch offset relative to the first touch.

- **translationY**: *number*
    Current vertical touch offset relative to the first touch.

- **velocityX**: *number*
    Current horizontal velocity in pixels per second.

- **velocityY**: *number*
    Current vertical velocity in pixels per second.


### panUp

Fired when a finger starts moving up.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **state**: *'start'|'change'|'end'|'cancel'*
    'start' when the finger starts moving, 'change' while the finger is moving, 'end' when the finger has been lifted and 'cancel' when the gesture has been interrupted.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.

- **translationX**: *number*
    Current horizontal touch offset relative to the first touch.

- **translationY**: *number*
    Current vertical touch offset relative to the first touch.

- **velocityX**: *number*
    Current horizontal velocity in pixels per second.

- **velocityY**: *number*
    Current vertical velocity in pixels per second.


### panVertical

Fired when a finger starts moving up or down.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **state**: *'start'|'change'|'end'|'cancel'*
    'start' when the finger starts moving, 'change' while the finger is moving, 'end' when the finger has been lifted and 'cancel' when the gesture has been interrupted.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.

- **translationX**: *number*
    Current horizontal touch offset relative to the first touch.

- **translationY**: *number*
    Current vertical touch offset relative to the first touch.

- **velocityX**: *number*
    Current horizontal velocity in pixels per second.

- **velocityY**: *number*
    Current vertical velocity in pixels per second.


### resize

Fired when the widget's size has changed. You can use this event to apply new [*layoutData*](#layoutdata).

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **height**: *number*
    The height of the widget in dip.

- **left**: *number*
    The horizontal offset from the parent's left edge in dip.

- **top**: *number*
    The vertical offset from the parent's top edge in dip.

- **width**: *number*
    The width of the widget in dip.


### swipeDown

Fired when a finger moves down quickly.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.


### swipeLeft

Fired when a finger moves left quickly.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.


### swipeRight

Fired when a finger moves right quickly.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.


### swipeUp

Fired when a finger moves up quickly.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.


### tap

Fired once when a finger briefly touched the widget.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **touches**: *{x: number, y: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.


### touchCancel

Fired instead of touchEnd when the touch ends on another widget than it started on.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **touches**: *{x: number, y: number, absoluteX: number, absoluteY: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.


### touchEnd

Fired when a touch ends on the same widget than it started on.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **touches**: *{x: number, y: number, absoluteX: number, absoluteY: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.


### touchMove

Fired repeatedly while swiping across the screen.

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **touches**: *{x: number, y: number, absoluteX: number, absoluteY: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.


### touchStart

Fired when a widget is touched. See [Touch Events](../touch.md).

#### Event Parameters 

- **target**: *this*
    The widget the event was fired on.

- **touches**: *{x: number, y: number, absoluteX: number, absoluteY: number}[]*
    Touch coordinates relative to the origin coordinates of the widget.





## See also

- [Understanding layouts in Tabris.js](../layout.md)
- [Understanding gesture events in Tabris.js](../touch.md)
